added toStringList(...) and toObjectArray(List, Class) convenience methods